@@ -1,5 +1,11 @@
 2001-12-08  Glynn Foster  <glynn.foster@sun.com>
 
+	* gnome-run.c, gnome-run.h, menu.c,
+	panel.c, session.c:  Whack gnome-run button applet thing which
+	serves very little purpose.
+
+2001-12-08  Glynn Foster  <glynn.foster@sun.com>
+
 	* launcher.c: (setup_button): Make adding launchers not crash.
 
 Fri Dec 07 14:48:01 2001  George Lebl <jirka@5z.com>
